# red-de-bibliotecas

./: .gitignore  CMakeLists.txt  Makefile  README.md  administradores_registrados.txt  lista_bibliotecas.txt  lista_bilbiotecas.txt  lista_inventario.txt  usuarios_registrados.txt
data/: administradores_registrados.txt  bibliotecarios_registrados.txt  lista_inventario.txt  usuarios_registrados.txt
include/: administrador.h  biblioteca.h  bibliotecario.h  controlador_usuarios.h  inventario.h  libro.h  nif.h  persona.h  personas.h  red_bibliotecas.h  usuario.h
include/personas/: administrador.h  bibliotecario.h  persona.h  usuario.h
red-de-bibliotecas/: CMakeLists.txt
red-de-bibliotecas/include/: administrador.h  bibliotecario.h  controlador_usuarios.h  inventario.h  libro.h  nif.h  persona.h  tools.h  usuario.h  usuarios.h
red-de-bibliotecas/src/: CMakeLists.txt  administrador.cc  administrador.h  bibliotecario.cc  bibliotecario.h  controlador_usuarios.cc  libro.cc  main.cc  nif.cc  nif.h  persona.h  tools.cc  tools.h  usuario.cc  usuario.h  usuarios.h
src/: CMakeLists.txt  administrador.cc  bibliotecario.cc  controlador_usuarios.cc  inventario.cc  libro.cc  main.cc  nif.cc  persona.cc  red_bibliotecas.cc  usuario.cc
src/personas/: administrador.cc  bibliotecario.cc  persona.cc  usuario.cc
